# ai-db-orm

./: README.md  pyproject.toml
ai-db-orm/: enums.py  models.py  repos.py  settings.py
ai_db_orm/: models.py  repos.py  settings.py
